--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -56,12 +56,12 @@
 			               		</p>
 			               		<p class="info"><i>Progetto formativo:</i></p>
 			               		<#if tirocinioStudente.stato.name() == "accettato">
-			               			<form action="upload?utente=${utente.utente}" method="post" enctype='multipart/form-data'>
+			               			<form action="upload?candidato=${utente.utente}&utente=${utente.utente}" method="post" enctype='multipart/form-data'>
 									    <input type="file" name="file" />
 									    <input class="pointer" type="submit" value="&#xf093" />
 									</form>
 			               			<p class="info pointer">
-				               			<a href="download?codice_fiscale=${utente.utente}">
+				               			<a href="download?candidato=${utente.utente}&utente=${utente.utente}">
 					               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 					               			Progetto formativo
 				               			</a>	
@@ -69,7 +69,7 @@
 			               		</#if>
 			               		<p class="info"><i>Opzioni:</i></p>
 			               		<p class="info pointer">
-			               			<a href="tirocinioStudente?rimuovi=true">
+			               			<a href="tirocinioStudente?rimuovi=true&candidato=${utente.utente}&utente=${utente.utente}">
 				               			<i class="far fa-trash-alt fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 				               			Annulla richiesta
 			               			</a>	
@@ -81,7 +81,7 @@
 			               		</p>
 			               		<p class="info"><i>Stato richiesta:</i></p>
 			               		<p class="info pointer">
-			               			<a href="download?codice_fiscale=${utente.utente}">
+			               			<a href="download?candidato=${utente.utente}&utente=${utente.utente}">
 				               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 				               			Progetto formativo
 			               			</a>	
@@ -258,6 +258,7 @@
 		      </div>
 			      <form class="w3-container" action="tirocinioStudente" method="post">
 			        <div class="w3-section">
+			        	<input type="hidden" name="utente" value="${utente.utente}" />
 			        	<input type="hidden" name="id_tirocinio" value="${offerta.idTirocinio}" />
 			        	<h3 class="univaq-color profile">Informazioni sul tutore scelto</h3>
 						<label for="nomeTutore-${offerta.idTirocinio}"><b>Nome e Cognome Tutore</b></label>
