--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -27,6 +27,12 @@
           	<i class="fas fa-map-marker-alt fa-fw w3-margin-right"></i>
           	${azienda.indirizzoSedeLegale}
           </p>
+          
+          <p class="info">
+          	<i class="fas fa-map-marked fa-fw w3-margin-right"></i>
+          	${azienda.foroCompetente}
+          </p>
+          
           <p class="info">
           	<i class="fa fa-envelope fa-fw w3-margin-right"></i>
           	${azienda.email}
