--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -69,6 +69,10 @@
         		<hr>
           	<h5 class="bold"><b>Modalità</b></h5>
           	<p class="descrizione-tirocinio">${offertaTirocinio.modalita}</p>
+          	<hr>
+          	<h5 class="bold"><b>Informazioni tecniche</b></h5>
+          	<p class="descrizione-tirocinio">Il numero di ore richieste per completare il tirocinio è pari ${offertaTirocinio.numeroOre}.
+          	È previsto un rimborso di ${offertaTirocinio.rimborso}€</p>
           	<!-- 
           	<#if utente??>
 	          	<a href="#access-manager-modal">
