--- a/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
+++ b/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
@@ -1,7 +1,7 @@
 <!-- w3-animate-right -->
 <div id="search-bar">
     <div class="w3-card w3-round padding-edge">
-        <div class="w3-container intership">
+        <div class="w3-container no-padding intership">
             <div class="search-form collapsible-menu">
                 <input type="checkbox" id="menu" />
                 <label id="label-search" for="menu">${searchbartitle}</label>
