--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -99,9 +99,12 @@
 		       </div>
 	
 		   <!-- w3-animate-left -->
-	       <div id="aziende-convenzionate-container" class="w3-card w3-round">
-	           <h2 id="aziende-convenzionate">Aziende convenzionate</h2>
-	           <div class="w3-container" id="aziende-container">
+	       <div class="search-form collapsible-menu-2 w3-white w3-card w3-round">
+	            <input type="checkbox" id="menu-2" />
+	            <h2 class="w3-padding no-margin">
+	                <label class="pointer" id="label-aziende" for="menu-2">Aziende convenzionate</label>
+                </h2>
+                <div class="menu-content-2 w3-container" id="aziende-container">
 	               <#list aziende as azienda>
 	               	   <hr>
 	                   <div class="azienda">
