Added checked to collapsilable companies list

--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -9,7 +9,7 @@
 	
 		   <!-- w3-animate-left -->
 	       <div class="search-form collapsible-menu-2 w3-white w3-card w3-round  w3-margin-bottom">
-	            <input type="checkbox" id="menu-2" />
+	            <input type="checkbox" id="menu-2" checked />
 	            <h2 id="label-container" class="padding-edge no-margin">
 	                <label class="pointer" id="label-aziende" for="menu-2">Aziende convenzionate</label>
                 </h2>
