Added backgroun image

--- a/IntershipTutor/WebContent/templates/candidati.ftl.html
+++ b/IntershipTutor/WebContent/templates/candidati.ftl.html
@@ -10,7 +10,7 @@
 	   <div class="w3-quarter" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
-		           <div class="w3-container profile-container w3-margin-bottom">
+		           <div class="w3-container profile-container w3-margin-bottom w3-round white-background">
 
 	           	   		<h2 id="nome-utente" class="w3-center univaq-color">${azienda.nome} </h2>
 	           	   		<p class="info padding-top-bot">
@@ -41,7 +41,7 @@
 			<include "components/searchbar.ftl.html">
 		-->
     
-      	<div class="w3-padding w3-card w3-round w3-margin-bottom">
+      	<div class="w3-padding w3-card w3-round w3-margin-bottom white-background">
 	        <h2 id="titolo-tirocinio" class="w3-text-grey w3-padding">
 	        	<a href="offertaTirocinio?id_tirocinio=${offertaTirocinio.idTirocinio}">
 		        	<i class="fas fa-users fa-fw w3-margin-right w3-xlarge"></i>
