--- a/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
+++ b/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
@@ -1,6 +1,6 @@
 <!-- w3-animate-right -->
 <div id="search-bar">
-    <div class="w3-card w3-round padding-edge">
+    <div class="w3-card w3-round padding-edge white-background">
         <div class="w3-container no-padding intership">
             <div class="search-form collapsible-menu">
                 <input type="checkbox" id="menu" />
