--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -10,7 +10,7 @@
     <div class="w3-quarter">
     
       <div class="w3-card w3-round">
-        <div class="padding-edge padding-bottom">
+        <div class="padding-edge padding-bottom w3-round white-background">
         	<a href="./azienda?azienda=${azienda.utente}">
 	          	<h2 id="nome-utente" class="w3-center univaq-color">
 	       			${azienda.nome}
@@ -46,7 +46,7 @@
     <!-- w3-animate-bottom -->
     <div class="w3-threequarter">
     
-      <div class="w3-padding w3-card w3-round w3-margin-bottom">
+      <div class="w3-padding w3-card w3-round w3-margin-bottom white-background">
         <h2 id="titolo-tirocinio" class="w3-text-grey w3-padding">
         	<i class="fa fa-suitcase fa-fw w3-margin-right w3-xlarge"></i>
         	${offertaTirocinio.titolo}
