--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -9,7 +9,7 @@
 	   <div class="w3-quarter" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
-		           <div class="w3-container profile-container w3-margin-bottom">
+		           <div class="w3-container profile-container w3-margin-bottom w3-round white-background">
 		           	   
 	           	   		<h2 id="nome-utente" class="w3-center univaq-color">${utente.nome} ${utente.cognome}</h2>
 	           	   		<p class="info padding-top-bot">
@@ -137,7 +137,7 @@
 	        <!-- Including searchbar -->
 			<#include "components/searchbar.ftl.html">
 	       
-	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding">
+	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding white-background">
 				<h2 id="tirocini-disponibili" class=" w3-padding w3-text-grey">
 					<i class="fas fa-list-ul fa-fw w3-margin-right w3-xlarge"></i>
 					Tirocini disponibili
