--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -8,6 +8,10 @@ body {
 	margin: 0
 }
 
+body{
+	background: #dfdfdf url(../img/cream_pixels.png);
+}
+
 h1{
     margin-top: 40px;
     font-weight: 500;
@@ -108,6 +112,10 @@ i{
 
 .padding-top-bot{
 	padding: 5px 0;
+}
+
+.white-background{
+	background-color: #ffffff;
 }
 
 .univaq-color-background{
