--- a/IntershipTutor/WebContent/templates/components/pagination.ftl.html
+++ b/IntershipTutor/WebContent/templates/components/pagination.ftl.html
@@ -5,7 +5,7 @@
 			</#if>
 
 	       <div class="w3-center">
-	           <div id="pagination" class="w3-bar w3-border">
+	           <div id="pagination" class="w3-bar w3-border white-background">
 	           		
 	           		<!-- back button only present if at least 2 pages are present -->
 	           		<#if (paginaCorrente + 1) gt 1>
