--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -46,7 +46,7 @@
 	       <#include "components/searchbar.ftl.html">
 	       
 	       <!-- w3-animate-bottom -->
-	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding">
+	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding white-background">
 				<h2 id="tirocini-disponibili" class=" w3-padding w3-text-grey">
 					<i class="fas fa-list-ul fa-fw w3-margin-right w3-xlarge"></i>
 					Tirocini disponibili
