--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -22,7 +22,7 @@
 
 	<!-- NAVBAR PC -->
 	<div class="w3-bar univaq-color-background w3-large w3-padding-large w3-hide-small">
-	    <a href="../IntershipTutor" class="w3-bar-item no-padding">
+	    <a href="." class="w3-bar-item no-padding">
 	        <i class="fa fa-home w3-margin-right univaq-color-background pointer"></i>
 	        IntershipTutor
 	    </a>
@@ -43,7 +43,7 @@
 	<!-- NAVBAR MOBILE -->
 	<div class="w3-bar univaq-color-background w3-large  w3-hide-medium">
 	    <div class="collapsible-menu-1 w3-padding-large w3-hide-large">
-	    	<a href="../IntershipTutor">
+	    	<a href=".">
 	            <i class="fa fa-home w3-margin-right univaq-color-background"></i>
 	            IntershipTutor
 	        </a>
