--- a/IntershipTutor/WebContent/templates/homepage-amministratore.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-amministratore.ftl.html
@@ -18,7 +18,7 @@
 	
 	<!-- NAVBAR PC -->
 	<div id="navbar-pc" class="w3-bar w3-white w3-large w3-padding w3-hide-small">
-	    <a href="../IntershipTutor" class="w3-bar-item no-padding">
+	    <a href="." class="w3-bar-item no-padding">
 	        <i class="fa fa-home w3-margin-right univaq-color-background pointer"></i>
 	        IntershipTutor
 	    </a>
@@ -32,7 +32,7 @@
 	<!-- NAVBAR MOBILE -->
 	<div id="navbar-mobile" class="w3-bar w3-white w3-large  w3-hide-medium">
 	    <div class="collapsible-menu-1 w3-padding-large w3-hide-large">
-	    	<a href="../IntershipTutor">
+	    	<a href=".">
 	            <i class="fa fa-home w3-margin-right univaq-color-background"></i>
 	            IntershipTutor
 	        </a>
