--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -31,10 +31,25 @@
           <p class="info">
           	<i class="fa fa-phone fa-fw w3-margin-right"></i>
           	${azienda.telefono}
-          </p> 
-        </div>
-        
-        
+          </p>
+          <#if pareriTirocinio?size gt 0>
+         	<hr />
+         	<a href="#pareri-tirocinio-modal">
+	         	<p class="info pointer">
+		         	<i class="fas fa-clipboard-list fa-fw w3-margin-right"></i>
+		          	Pareri
+		         </p>
+	         </a>
+          </#if>
+          <#if hasIntership>
+        	<a href="#review">
+	         	<p class="info pointer">
+		         	<i class="fas fa-marker fa-fw w3-margin-right "></i>
+		          	Recensisci
+		         </p>
+	         </a>
+        </#if> 
+        </div>       
       </div>
       <br>
 		
@@ -64,18 +79,28 @@
 	          		<!-- <span class="w3-tag w3-round univaq-color-background">Current</span> -->
 	          	</p>
           	</#if>
+          	<#if offertaTirocinio.oraInizio?? && offertaTirocinio.oraFine??>
+	          	<p class="info">
+	          		<i class="far fa-clock fa-fw w3-margin-right"></i>
+	          		da ${offertaTirocinio.oraInizio[0..4]} al ${offertaTirocinio.oraFine[0..4]} 
+	          	</p>
+          	</#if>
           	<h5 class="bold"><b>Obiettivi</b></h5>
           		<p class="descrizione-tirocinio">${offertaTirocinio.obiettivi}</p>	        
         		<hr>
           	<h5 class="bold"><b>Modalità</b></h5>
           	<p class="descrizione-tirocinio">${offertaTirocinio.modalita}</p>
-          	<#if offertaTirocinio.rimborso??>
-          	<hr>
-          	<h5 class="bold"><b>Informazioni tecniche</b></h5>
-          	<p class="descrizione-tirocinio">
-	          	Il numero di ore richieste per completare il tirocinio è pari ${offertaTirocinio.numeroOre}.
-	          	È previsto un rimborso di ${offertaTirocinio.rimborso}€
-          	</p>
+          	<#if offertaTirocinio.rimborso?? || offertaTirocinio.numeroOre gt 0>
+	          	<hr>
+	          	<h5 class="bold"><b>Informazioni tecniche</b></h5>
+	          	<p class="descrizione-tirocinio">
+	          		<#if offertaTirocinio.numeroOre gt 0>
+		          		Il numero di ore richieste per completare il tirocinio è pari ${offertaTirocinio.numeroOre}.
+		          	</#if>
+		          	<#if offertaTirocinio.rimborso??>
+		          		È previsto un rimborso di ${offertaTirocinio.rimborso}€.
+		          	</#if>
+	          	</p>
           	</#if>
           	<!-- 
           	<#if utente??>
@@ -106,3 +131,54 @@
   
   <!-- End Page Container -->
 </div>
+
+<!-- Read reviews modal -->
+    <div id="pareri-tirocinio-modal" class="overlay">
+	    <div class="w3-card w3-white w3-round popup w3-padding">
+	
+	      <div class="w3-center"><br>
+	      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+	        <h2>Pareri sul tirocinio</h2>
+	      </div>
+	        <div class="w3-section">
+				<#list pareriTirocinio?keys as studente>
+					<hr />
+					<p class="no-margin"><b>${studente}</b></p>
+					<p>${pareriTirocinio[studente]}</p>
+				</#list>
+	        </div>
+	      </div>
+      </div>
+
+<!-- Review intership -->
+<#if studente?? && hasIntership??>
+      <div id="review" class="overlay">
+	    <div class="w3-card w3-white w3-round popup w3-padding">
+	
+	      <div class="w3-center"><br>
+	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+	        <h2>Esprimi il tuo parere su questo tirocinio</h2>
+	      </div>
+	        <form class="w3-container" action="./offertaTirocinio?referrer=offertaTirocinio?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post">
+		        <div class="w3-section">
+		          <!-- The user CF is hidden, it is used to retrieve the current user from database -->
+		          <input type="hidden" name="utente" value="${studente.utente}" />
+		          <input type="hidden" name="tirocinio" value="${offertaTirocinio.idTirocinio}" />
+		          <#if tirocinioStudente?? && tirocinioStudente.parere??>
+		          		<!-- To update the review -->
+		          		<input type="hidden" name="update" value="update" />
+		          </#if>
+		          <label for="parere"><b>Parere</b></label>
+				  <textarea id="parere" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2500" placeholder="Esprimi il tuo parere sull'azienda" name="parere" autocomplete="off" required><#if tirocinioStudente?? && tirocinioStudente.parere??>${tirocinioStudente.parere}</#if></textarea>
+	          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="recensisci" value="recensisci">
+	          	  	<#if tirocinioStudente?? && tirocinioStudente.parere??>
+	          	  		Aggiungi recensione
+	          	  	<#else>
+	          	  		Aggiorna recensione
+	          	  	</#if>
+	          	  </button>
+		        </div>
+		      </form>
+	      </div>
+      </div>
+      </#if>
