--- a/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
+++ b/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
@@ -10,7 +10,9 @@
                     <form action="${servlet}" method="get">
 	                     <#list campiRicerca as campoRicerca>
 	                         <label class="field-filter">${campoRicerca?capitalize?replace("_", " ")}</label>
-	                         <input name="${campoRicerca}" class="w3-input" autocomplete="off" />
+	                         <input name="${campoRicerca}" class="w3-input" autocomplete="off" 
+	                         <#if campoRicerca.name() == "durata_minima" ||
+	                         	  campoRicerca.name() == "durata_massima" >type="number"</#if> />
 	                     </#list>
 	                     <button type="submit" class="w3-button w3-right w3-border w3-round">Cerca</button>
                     </form>
