--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -145,6 +145,10 @@ i{
     margin-bottom: 15px
 }
 
+.w3-button:hover{
+    color: #ffffff !important;
+    background-color: #822627 !important
+}
 
 .w3-input{
     margin-top: 5px;
@@ -160,9 +164,12 @@ i{
     border-color: #822627 !important
 }
 
-.w3-button:hover{
-    color: #ffffff !important;
-    background-color: #822627 !important
+.w3-input:focus::placeholder{
+    color: #822627 !important
+}
+
+.w3-input::placeholder{
+	font-size: 14px
 }
 
 .w3-border{
